--- a/style.css
+++ b/style.css
@@ -224,6 +224,22 @@ footer {
     height: 20px;
     margin-top: 5px;
 }
+
+.pulsing-text {
+  font-size: 24px;
+  color: #FFFF00;
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
 /* ===================== CÍRCULO DE PERFIL ===================== */
 .profile-circle {
     width: 70px; /* Largura do círculo */
